--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.js",
+	"engines": {
+		"node": "14.19.0",
+		"npm": "8.4.1"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "nodemon app.js"
