--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
 	"scripts": {
 		"start": "cd server && npm install && node index.js",
 		"heroku-postbuild": "cd client && npm install && npm run build"
+	},
+	"engines": {
+		"node": "14.19.0",
+		"npm": "8.4.1"
 	}
 }
