--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
+	"scripts": {
+		"start": "node app.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
 	"name": "server",
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon app.js"
-	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
