--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"scripts": {
 		"start": "cd server && npm install && node app.js",
-		"heroku-postbuild": "cd client && npm install && npm run build"
+		"heroku-postbuild": "cd client && npm install && npm run build",
+		"db-init": "cd server && npx sequelize-cli db:init"
 	},
 	"engines": {
 		"node": "14.19.0",
