--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
 		"passport-jwt": "^4.0.0",
 		"pg": "^8.7.3",
 		"pg-hstore": "^2.3.4",
-		"sequelize": "^6.21.4"
+		"sequelize": "^6.21.4",
+		"sequelize-cli": "^6.5.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.19"
