--- a/package.json
+++ b/package.json
@@ -2,11 +2,35 @@
 	"scripts": {
 		"start": "cd server && npm install && node app.js",
 		"heroku-postbuild": "cd client && npm install && npm run build",
-		"db-init": "cd server && npx sequelize-cli db:init",
-		"db-migrate": "cd server && npx sequelize-cli db:migrate"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"db-init": "npx sequelize-cli db:init",
+		"db-migrate": "npx sequelize-cli db:migrate"
 	},
 	"engines": {
 		"node": "14.19.0",
 		"npm": "8.4.1"
+	},
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server/app.js",
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"body-parser": "^1.20.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"jsonwebtoken": "^8.5.1",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.0",
+		"pg": "^8.7.3",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.21.4",
+		"sequelize-cli": "^6.5.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.19"
 	}
 }
