--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
-	"proxy": "http://localhost:3001/",
+	"proxy": "https://menu-online-node.herokuapp.com/",
 	"eslintConfig": {
 		"extends": [
 			"react-app",
