--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,8 @@
 {
 	"rewrites": [
 		{
-			"source": "/api/:path",
-			"destination": "https://menu-online-node.herokuapp.com/api/:path"
+			"source": "/api/:path*",
+			"destination": "https://menu-online-node.herokuapp.com/api/:path*"
 		}
 	]
 }
