--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"scripts": {
 		"start": "cd server && npm install && node app.js",
-		"heroku-postbuild": "cd client && npm install && npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"db-init": "cd server && npx sequelize-cli init",
 		"db-migrate": "cd server && npx sequelize-cli db:migrate"
 	},
 	"engines": {
-		"node": "14.19.0",
+		"node": "16.12.0",
 		"npm": "8.4.1"
 	},
 	"name": "server",
@@ -17,12 +16,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"aws-sdk": "^2.1248.0",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.20.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^2.10.0",
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.0",
 		"pg": "^8.7.3",
